resolve like number overflow

--- a/content/themes/bigertech/assets/less/post.less
+++ b/content/themes/bigertech/assets/less/post.less
@@ -455,11 +455,11 @@ border-bottom: 1px solid #ebebeb;
   .more-post {
     padding-top: 50px;
     padding-bottom: 50px;
-    width: 730px;
+    width: 745px;
     .post-item {
       position: relative;
       padding: 0;
-      width: 363px;
+      width: 367px;
       .isVideo {
         position: absolute;
         top: 18px;
@@ -508,7 +508,7 @@ border-bottom: 1px solid #ebebeb;
     }
     li:last-child {
       float: right;
-      padding-left: 50px;
+      padding-left: 40px;
       .isVideo {
         top: 18px;
         left: 89px;
